objects/platformevent1__e.object
<CustomObject>
    <fields>
        <fullName>field1__c</fullName>
        <label>field1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field2__c</fullName>
        <label>field2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field3__c</fullName>
        <label>field3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>platformevent1</label>
    <pluralLabel>Platformevents</pluralLabel>
</CustomObject>